--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <script type="text/javascript" src="assets/js/lib/jquery-3.5.1.min.js"></script>
 </head>
 <body>
+
+    <div id="container">
+    <h1>To-Do List</h1>
+    <input type="text">
+    <ul>
+        <li><span>X </span>Go To Potions Class</li>
+        <li><span>X </span>Byu New Robes</li>
+        <li><span>X </span> Hagrid</li>
+        
+    </ul>
+</div>
     
     <script type="text/javascript" src="assets/js/todos.js"></script>
 
