--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <title>To Do List</title>
     <link rel="stylesheet" type="text/css" href="assets/css/todos.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/c00ad845f8.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="assets/js/lib/jquery-3.5.1.min.js"></script>
 </head>
 <body>
 
     <div id="container">
-    <h1>To-Do List</h1>
+    <h1>To-Do List <i class="fas fa-plus"></i></h1>
     <input type="text" placeholder="Add New Todo">
     <ul>
         <li><span>X </span>Go To Potions Class</li>
