--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <h1>To-Do List <i class="fas fa-plus"></i></h1>
     <input type="text" placeholder="Add New Todo">
     <ul>
-        <li><span>X </span>Go To Potions Class</li>
-        <li><span>X </span>Byu New Robes</li>
-        <li><span>X </span> Hagrid</li>
+        <li><span><i class="fa fa-trash"></i></span> Go To Potions Class</li>
+        <li><span><i class="fa fa-trash"></i></span> Byu New Robes</li>
+        <li><span><i class="fa fa-trash"></i></span> Hagrid</li>
         
     </ul>
 </div>
