--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
     <div id="container">
     <h1>To-Do List <i class="fas fa-plus"></i></h1>
-    <input type="text" placeholder="Add New Todo">
+    <input type="text" placeholder="Add New Todo...">
     <ul>
         <li><span><i class="fa fa-trash"></i></span> Go To Potions Class</li>
-        <li><span><i class="fa fa-trash"></i></span> Byu New Robes</li>
-        <li><span><i class="fa fa-trash"></i></span> Hagrid</li>
+        <li><span><i class="fa fa-trash"></i></span> Buy New Robes</li>
+        <li><span><i class="fa fa-trash"></i></span> Visit Hagrid</li>
         
     </ul>
 </div>
